# kyb_v2

./: .gitignore  CODE_REVIEW.md  INSTRUCCIONES_KARLA.md  README.md  SPEC_ESTRUCTURA_ACCIONARIA.md  ocr-results.postman_collection.json  pyproject.toml
Arizona/pld_agent/: CHANGELOG.md  PLD_Process.md  README.md  __init__.py  main.py  pyproject.toml
Arizona/pld_agent/api/: mer_router.py  router.py
Arizona/pld_agent/core/: config.py  database.py  normalize.py
Arizona/pld_agent/docs/: MER_PLD_text.txt  Modelo de riesgo de los clientes 2025.xlsx
Arizona/pld_agent/models/: dictamen_schemas.py  mer_schemas.py  schemas.py
Arizona/pld_agent/services/: __init__.py  blacklist_screening.py  data_loader.py  dictamen_generator.py  dictamen_txt.py  etapa1_completitud.py  etapa4_propietarios_reales.py  llm_analysis.py  mer_calculator.py  mer_catalogos.py  mer_engine.py  mer_search.py  persistence.py  report_generator.py
Arizona/pld_agent/tests/: test_etapa1.py  test_etapa4.py  test_mer_calculator.py
Colorado/cross_validation/: .env.example  .gitignore  CHANGELOG.md  README.md  __init__.py  __main__.py  main.py  pyproject.toml
Colorado/cross_validation/api/: router.py
Colorado/cross_validation/core/: __init__.py  config.py  database.py
Colorado/cross_validation/logs/: .gitignore
Colorado/cross_validation/models/: __init__.py  schemas.py
Colorado/cross_validation/services/: __init__.py  data_loader.py  engine.py  persistence.py  report_generator.py  text_utils.py
Colorado/cross_validation/services/portal_validator/: __init__.py  base.py  captcha.py  engine.py  fiel_validator.py  ine_validator.py  report.py  rfc_validator.py
Colorado/cross_validation/services/validators/: __init__.py  base.py  bloque10_portales.py  bloque11_comparacion_fuentes.py  bloque1_identidad.py  bloque2_domicilio.py  bloque3_vigencia.py  bloque4_apoderado.py  bloque5_estructura.py  bloque5b_reformas.py  bloque6_bancarios.py  bloque7_notarial.py  bloque8_calidad.py  bloque9_completitud.py
Colorado/cross_validation/tests/: test_bloque5b_reformas.py  test_engine.py  test_persistence.py  test_report_generator.py  test_text_utils.py  test_validators.py
Dakota/kyb_review/: CHANGELOG.md  README.md  alembic.ini  pyproject.toml
Dakota/kyb_review/Test_Files/INE/: Dakota - Acceso directo.lnk
Dakota/kyb_review/alembic/: env.py  script.py.mako
Dakota/kyb_review/alembic/versions/: 2026_02_20_0001_crear_tablas_empresas_y_documentos.py  2026_02_20_0002_simplificar_esquema.py  2026_02_20_0003_eliminar_texto_ocr.py  2026_02_26_0004_crear_tabla_validaciones_cruzadas.py  2026_02_27_0005_upsert_unique_constraints.py  2026_02_28_0006_crear_tabla_analisis_pld.py  2026_03_12_0007_crear_tabla_dictamenes_pld.py  2026_03_12_0008_crear_tabla_pipeline_resultados.py  2026_03_17_0009_redisenar_tabla_analisis_pld.py  2026_03_19_0010_agregar_columnas_arizona_dictamen.py  2026_03_19_0011_crear_tabla_dictamenes_legales.py  README
Dakota/kyb_review/api/: config.py  main.py
Dakota/kyb_review/api/client/: client.py  colorado_client.py
Dakota/kyb_review/api/controller/: controller.py  docs.py  files.py
Dakota/kyb_review/api/db/: __init__.py  models.py  repository.py  session.py
Dakota/kyb_review/api/mcp/: tools.py
Dakota/kyb_review/api/middleware/: __init__.py  auth.py  guardrails.py  logging_middleware.py  rate_limit.py
Dakota/kyb_review/api/model/: ActaConstitutiva.py  AdditionalData.py  Csf.py  DocFormat.py  DocType.py  Domicilio.py  EdoCuenta.py  Fiel.py  Genero.py  PersonaFisica.py  TipoPersonaFisica.py  __init__.py  document_identity.py  estructura_accionaria.py  model.py  orchestrator.py  validator.py
Dakota/kyb_review/api/prompts/: history.json
Dakota/kyb_review/api/router/: docs.py  empresas.py  files.py  onboarding.py  people.py  router.py  validator.py
Dakota/kyb_review/api/server/: server.py
Dakota/kyb_review/api/service/: .env.example  di.py  document_identifier.py  file_validator.py  (+13 more)
Dakota/kyb_review/docs/: ARCHITECTURE.md  BUG_FIX_REPORT.md  DATABASE_GUIDE.md  DEVELOPERS_GUIDE.md  MIGRATION_GUIDE_v1.1.md  PRODUCTION_CHECKLIST.md
Dakota/kyb_review/scripts/: cleanup_temp.py  copy_ine_models.py  deploy.ps1  deploy.sh  fix_encoding.py  test_multiseccion.py  upload_json_to_db.py  verify_ine_models.py
Dakota/kyb_review/tests/: test_alertas_estructura.py  test_document_identifier.py  test_document_identifier_agent.py  test_estructura_accionaria.py  test_guardrails.py  test_integration_endpoints.py  test_orchestrator.py  test_rfc_validator.py  test_strict_document_validation.py  test_validator.py
Nevada/legal_agent/: __init__.py  main.py  pyproject.toml
Nevada/legal_agent/api/: router.py
Nevada/legal_agent/core/: config.py  database.py
Nevada/legal_agent/knowledge/: reglas_dictamen.md  template_sections.json
Nevada/legal_agent/models/: schemas.py
Nevada/legal_agent/services/: data_loader.py  dictamen_generator.py  persistence.py  rules_engine.py
Nevada/legal_agent/tests/: test_rules_engine.py
Orquestrator/: .env.example  CHANGELOG.md  README.md  pyproject.toml
Orquestrator/app/: __init__.py  clients.py  config.py  database.py  main.py  persistence.py  pipeline.py  router.py
Orquestrator/tests/: test_clients.py  test_pipeline.py  test_router.py
(+58 files in other folders)
